--- a/TODO
+++ b/TODO
@@ -38,6 +38,7 @@
     ✓ list of files in the conf, bring in blocks from each one in order
     ✓ block type is per file, not per project
     ✓ language build tool will manage dependencies, so we don't have any feature work here
+  ✓ directory tree support: support projects in directories by reading everything into one buffer
   ✓ don't symlink but just copy the new version (e.g. we shouldn't be committing a symlink for the main project file in git)
   ✓ support an alternative conf file location
   ✓ handle syntax highlighting / filetype issues: put an extension the tmp filename
@@ -49,6 +50,10 @@
   ✓ add a build timestamp to the version string
   ✓ add a Makefile
   ✓ publish TODO in the repo
+  ✓ push v4
+  ✓ make sure there is at least one file (in check_conf_vars)
+  ✓ when the conf file doesn't exist report the error better
+    push v4 again
     handle the multiple search result issue -- just make 'n' and 'N' work
       the search should show the current matching line, in the center of the display
       n goes to the next, which may or may not be in the same block
@@ -56,15 +61,20 @@
       e might also do a +N or equivalent
     add "settings mode" but for files
     deal with the function declaration / header issue -> general-purpose code hygiene transforms
+    support having "principles" that are checked/enforced by the LLM
+      only on block changes for efficiency / over all code by special command
     think about using the LLM to write the comment and not just the code (i.e. 'r' and 'R')
     check if current file == latest rev on load, if not store a new rev
     not mint a rev if block unchanged / basic diff features "d" for diff (by def. w/ prev rev) of block
     support API usage
     parametrize comment_to_prompt
-    make the prompts all config
+    make the prompts all config -- or all files in .cmpr
     editor should be a config
     add o / O for block insertions
-      - works the same as editing a block except the file starts empty and instead of replacing we insert
+      works the same as editing a block except the file starts empty and instead of replacing we insert
+      once we show the file in the ruler, always adds to the current file
+    add support for numbers (e.g. for G, d, etc)
+    support "extended" commands starting with ":"
     add 'd', 'p', 'P' so that moving around blocks is easy
     visual selection mode works with "r"
     visual selection mode works with "e"
@@ -73,6 +83,8 @@
     consider metadata on blocks: prompt "wrapper" functions, custom block end, etc
     tagging blocks
     bring compiler errors into the workflow (line no -> block, etc)
+      stderr into a file into a "temporary" block
+      heuristics identify errors and line numbers in a compiler-agnostic way
     FIX code formatting issues once and for all
     ****** have cmpr handle it's own TODO items ******
     support system prompts / "spanio_prompt" and "code_prompt" / "bootstrap" prompt
@@ -82,4 +94,3 @@
     TOC presentation of blocks (LLM summarization???)
     intro video -- mp4 or gif in repo -- youtube (one more thing = language switch)
     basic stats on blocks e.g. comment-code ratio
-    directory tree support: support projects in directories by reading everything into one buffer
